--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -125,10 +125,10 @@
                 <tr>
                   <td class="tb-col" rowspan="3" align="center">평가 베이시스</td>
                   <td class="tb-col" bgcolor="#E1F3FE">부지 특성</td>
-                  <td class="data" onclick=location.href="{% url 'document' %}">An international peer review of the post-closure
+                  <td>An international peer review of the post-closure
                     radiological safety assessment for disposal in the Opalinus Clay of the Zürcher Weinland (스위스, 2004, NEA)</td>
                   <td>International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)</td>
-                  <td>SR-Site initial review (스웨덴, 2011~2013, SSM)</td>
+                  <<td class="data" onclick=location.href="{% url 'document' %}">SR-Site initial review (스웨덴, 2011~2013, SSM)</td>
                   <td>EPG<br> SITEX-II Project</td>
                   <td></td>
                   <td></td>
