--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -19,7 +19,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4"> Database </h3>
+          <h3 class="mb-4"> 심층처분시스템 안전규제 데이터베이스 </h3>
 
         </div>
       </div>
@@ -54,9 +54,9 @@
               <a href="#" class="primary-link">
                 <h6 class="fs-18 mb-2">규제기준</h6>
               </a>
-              <p class="text-muted mb-4">(주)비알엔씨</p>
+              <p class="text-muted mb-4">법령 체계 및 규제 관련 법안</p>
 
-              <a href="{% url 'institution' %}" class="btn btn-primary">국가별 문서</a>
+              <a href="{% url 'institution' %}" class="btn btn-primary">Database 접속</a>
             </div>
           </div>
         </div>
@@ -69,8 +69,8 @@
               <a href="#" class="primary-link">
                 <h6 class="fs-18 mb-2">규제사례</h6>
               </a>
-              <p class="text-muted mb-4">울산과학기술원</p>
-              <a href="{% url 'site' %}" class="btn btn-primary">국가별 문서</a>
+              <p class="text-muted mb-4">안전규제 사례 검토별 이슈</p>
+              <a href="{% url 'site' %}" class="btn btn-primary">Database 접속</a>
             </div>
           </div>
         </div>
