--- a/templates/kinsdb/UNIST/document.html
+++ b/templates/kinsdb/UNIST/document.html
@@ -14,7 +14,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4"> 규제사례 데이터베이스 </h3>
+          <h3 class="mb-4"> SR-Site initial review </h3>
 
         </div>
       </div>
