--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -97,14 +97,14 @@
                   <i class="uil uil-clipboard-notes"></i>
                   <select class="form-select" data-trigger name="choices-single-docs" id="choices-single-docs" onchange="changeCountry(this.value)">
                     <option value="">국가</option>
-                    <option value="미국">미국</option>
-                    <option value="스웨덴">스웨덴</option>
-                    <option value="스위스">스위스</option>
-                    <option value="영국">영국</option>
-                    <option value="일본">일본</option>
-                    <option value=캐나다"">캐나다</option>
-                    <option value="핀란드">핀란드</option>
-                    <option value="프랑스">프랑스</option>
+                    <option value="미국" {% if country == '미국' %}selected{% endif %}>미국</option>
+                    <option value="스웨덴" {% if country == '스웨덴' %}selected{% endif %}>스웨덴</option>
+                    <option value="스위스" {% if country == '스위스' %}selected{% endif %}>스위스</option>
+                    <option value="영국" {% if country == '영국' %}selected{% endif %}>영국</option>
+                    <option value="일본" {% if country == '일본' %}selected{% endif %}>일본</option>
+                    <option value="캐나다" {% if country == '캐나다' %}selected{% endif %}>캐나다</option>
+                    <option value="핀란드" {% if country == '핀란드' %}selected{% endif %}>핀란드</option>
+                    <option value="프랑스" {% if country == '프랑스' %}selected{% endif %}>프랑스</option>
 
                   </select>
                 </div>
@@ -116,15 +116,15 @@
                   <i class="uil uil-clipboard-notes"></i>
                   <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" onchange="changeField(this.value)">
                     <option value="">부문</option>
-                    <option value="Safety Context">처분안전</option>
-                    <option value="부지환경">부지환경</option>
-                    <option value="천연방벽">천연방벽</option>
-                    <option value="공학적방벽">공학적방벽</option>
-                    <option value="방사성폐기물">방사성폐기물</option>
-                    <option value="부지개발">부지개발</option>
-                    <option value="URL 개발">URL 개발</option>
-                    <option value="처분시설 개발">처분시설 개발</option>
-                    <option value="안전사례">안전사례</option>
+                    <option value="처분안전" {% if field == '처분안전' %}selected{% endif %}>처분안전</option>
+                    <option value="부지환경" {% if field == '부지환경' %}selected{% endif %}>부지환경</option>
+                    <option value="천연방벽" {% if field == '천연방벽' %}selected{% endif %}>천연방벽</option>
+                    <option value="공학적방벽" {% if field == '공학적방벽' %}selected{% endif %}>공학적방벽</option>
+                    <option value="방사성폐기물" {% if field == '방사성폐기물' %}selected{% endif %}>방사성폐기물</option>
+                    <option value="부지개발" {% if field == '부지개발' %}selected{% endif %}>부지개발</option>
+                    <option value="URL개발" {% if field == 'URL개발' %}selected{% endif %}>URL 개발</option>
+                    <option value="처분시설개발" {% if field == '처분시설개발' %}selected{% endif %}>처분시설 개발</option>
+                    <option value="안전사례" {% if field == '안전사례' %}selected{% endif %}>안전사례</option>
                   </select>
                 </div>
               </div>
@@ -147,7 +147,7 @@
               <div class="col-lg-3">
                 <div>
                   <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i>검색</button>
-                  <a href="{% url 'database' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
+                  <a href="{% url 'database' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply"></i></a>
                 </div>
               </div>
             </div>
@@ -163,143 +163,142 @@
 
     <div class=" row justify-content-center">
       <div class="col-lg-3">
+      </div>
+      <div class="col-lg-9">
+        <div class="mb-3 mb-lg-0">
+          <h6 class="fs-16 mb-0" style="font-weight:200; color: gray"> Showing
+            <b>{{ page_obj.paginator.count }} results</b>
+          </h6>
         </div>
-                      <div class="col-lg-9">
-                        <div class="mb-3 mb-lg-0">
-                          <h6 class="fs-16 mb-0" style="font-weight:200; color: gray"> Showing
-                            <b>{{ page_obj.paginator.count }} results</b>
+        <!--end col-->
 
-                            {% if field == "tag" %} for #{{ tag }} {% elif field == "title" and search %} for "{{ search }}" {% else %} - {% endif %}
-                          </h6>
-                        </div>
-                        <!--end col-->
+      </div>
+      <!--end row-->
 
-                      </div>
-                      <!--end row-->
+    </div>
 
+
+
+    <div class="row justify-content-center">
+      <div class="col-lg-3 mt-4">
+        <div class="accordion-item mt-3">
+          <h2 class="accordion-header" id="jobType">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#regulation" aria-expanded="false" aria-controls="regulation">
+              법령체계
+            </button>
+          </h2>
+          <div id="regulation" class="accordion-collapse collapse show" aria-labelledby="regulationOne">
+            <div class="accordion-body">
+              <div class="side-title">
+
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" value="all" id="flexCheckChecked1" {% if regulation|length >= 4 %}checked{% endif %} name="selectall" onclick="selectAll(this)" />
+                  <label class="form-check-label text-muted" for="flexCheckChecked1">전체</label>
                 </div>
 
-
-
-                <div class="row justify-content-center">
-                  <div class="col-lg-3 mt-4">
-                    <div class=" accordion-item mb-4">
-                      <h2 class="accordion-header" id="experienceOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#regulation" aria-expanded="true" aria-controls="regulation">
-                          법령체계
-                        </button>
-                      </h2>
-                      <div id="re" class="accordion-collapse collapse show" aria-labelledby="experienceOne">
-                        <div class="accordion-body">
-                          <div class="side-title">
-                            <div class="form-check mt-2">
-                              <input class="form-check-input" type="checkbox" value="all" id="flexCheckChecked1" {% if regulation|length >= 4 %}checked{% endif %} name="selectall" onclick="selectAll(this)" />
-                              <label class="form-check-label text-muted" for="flexCheckChecked1">전체</label>
-                            </div>
-
-                            <div class="form-check mt-2">
-                              <input class="form-check-input" type="checkbox" value="미국" id="flexCheckChecked2" {% if '법률' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
-                              <label class="form-check-label text-muted" for="flexCheckChecked2">법률</label>
-                            </div>
-                            <div class="form-check mt-2">
-                              <input class="form-check-input" type="checkbox" value="스웨덴" id="flexCheckChecked3" {% if '규정' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
-                              <label class="form-check-label text-muted" for="flexCheckChecked3">규정</label>
-                            </div>
-                            <div class="form-check mt-2">
-                              <input class="form-check-input" type="checkbox" value="핀란드" id="flexCheckChecked4" {% if '규제지침' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
-                              <label class="form-check-label text-muted" for="flexCheckChecked4">규제지침</label>
-                            </div>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div><!-- end accordion-item -->
-                  </div>
-
-                  <div class="col-lg-9">
-                    <div class="candidate-list">
-
-                      {% for doc in page_obj %}
-                      <!-- start card -->
-                      {% include 'partials/brnc_card.html' %}
-                      <!--end card-->
-                      {% endfor %}
-
-                      <script>
-                        function searchTag(tag_content) {
-                          var form = document.getElementById('search_filter');
-
-                          document.getElementById('exampleFormControlInput1').value = tag_content;
-                          form.submit();
-                        }
-                      </script>
-
-                    </div>
-                    <!--end candidate-list-->
-                  </div>
-                  <!--end col-->
-
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" value="미국" id="flexCheckChecked2" {% if '법률' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
+                  <label class="form-check-label text-muted" for="flexCheckChecked2">법률</label>
                 </div>
-                <!--end row-->
-
-                <div class="row">
-                  <div class="col-lg-2"></div>
-                  <div class="col-lg-10 mt-5">
-                    <nav>
-                      <ul class="pagination job-pagination mb-0 justify-content-center">
-
-                        {% if page_obj.has_previous %}
-                        <li class="page-item">
-                          <a class="page-link" href="{% my_url page_obj.previous_page_number 'page' request.GET.urlencode %}" tabindex="-1">
-
-                            <i class="mdi mdi-chevron-double-left fs-15"></i>
-                          </a>
-                        </li>
-                        {% else %}
-                        <li class="page-item disabled">
-                          <a class="page-link" href="javascript:void(0)">
-
-                            <i class="mdi mdi-chevron-double-left fs-15"></i>
-                          </a>
-                        </li>
-                        {% endif %}
-
-
-                        {% for page_number in page_obj.paginator.page_range %}
-                        {% if page_number == page_obj.number %}
-                        <li class="page-item active" aria-current="page">
-                          <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
-                        </li>
-                        {% else %}
-                        <li class="page-item">
-                          <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
-                        </li>
-                        {% endif %}
-                        {% endfor %}
-
-
-                        {% if page_obj.has_next %}
-                        <li class="page-item">
-                          <a class="page-link" href="{% my_url page_obj.next_page_number 'page' request.GET.urlencode %} ">
-                            <i class="mdi mdi-chevron-double-right fs-15"></i>
-                          </a>
-                        </li>
-                        {% else %}
-                        <li class="page-item disabled">
-                          <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
-                            <i class="mdi mdi-chevron-double-right fs-15"></i>
-                          </a>
-                        </li>
-                        {% endif %}
-
-                      </ul>
-                    </nav>
-                  </div>
-                  <!--end col-->
-                </div><!-- end row -->
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" value="스웨덴" id="flexCheckChecked3" {% if '규정' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
+                  <label class="form-check-label text-muted" for="flexCheckChecked3">규정</label>
+                </div>
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" value="핀란드" id="flexCheckChecked4" {% if '규제지침' in regulation %}checked{% endif %} name="regulation" onclick="checkSelectAll()" />
+                  <label class="form-check-label text-muted" for="flexCheckChecked4">규제지침</label>
+                </div>
 
               </div>
-              <!--end container-->
+            </div>
+          </div>
+        </div><!-- end accordion-item -->
+      </div>
+
+      <div class="col-lg-9">
+        <div class="candidate-list">
+
+          {% for doc in page_obj %}
+          <!-- start card -->
+          {% include 'partials/brnc_card.html' %}
+          <!--end card-->
+          {% endfor %}
+
+          <script>
+            function searchTag(tag_content) {
+              var form = document.getElementById('search_filter');
+
+              document.getElementById('exampleFormControlInput1').value = tag_content;
+              form.submit();
+            }
+          </script>
+
+        </div>
+        <!--end candidate-list-->
+      </div>
+      <!--end col-->
+
+    </div>
+    <!--end row-->
+
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-10 mt-5">
+        <nav>
+          <ul class="pagination job-pagination mb-0 justify-content-center">
+
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="{% my_url page_obj.previous_page_number 'page' request.GET.urlencode %}" tabindex="-1">
+
+                <i class="mdi mdi-chevron-double-left fs-15"></i>
+              </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link" href="javascript:void(0)">
+
+                <i class="mdi mdi-chevron-double-left fs-15"></i>
+              </a>
+            </li>
+            {% endif %}
+
+
+            {% for page_number in page_obj.paginator.page_range %}
+            {% if page_number == page_obj.number %}
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+              <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+
+
+            {% if page_obj.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="{% my_url page_obj.next_page_number 'page' request.GET.urlencode %} ">
+                <i class="mdi mdi-chevron-double-right fs-15"></i>
+              </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+                <i class="mdi mdi-chevron-double-right fs-15"></i>
+              </a>
+            </li>
+            {% endif %}
+
+          </ul>
+        </nav>
+      </div>
+      <!--end col-->
+    </div><!-- end row -->
+
+  </div>
+  <!--end container-->
 </section>
 <!-- END JOB-LIST -->
 {% endblock content %}
