--- a/templates/cloud/document-board/company-list.html
+++ b/templates/cloud/document-board/company-list.html
@@ -71,12 +71,12 @@
             </div>
             <img src="{% static 'images/logo/kins-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'candidate-list' %}" class="primary-link">
+              <a href="{% url 'shared-documents' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">KINS</h6>
               </a>
               <p class="text-muted mb-4">한국원자력안전기술원</p>
 
-              <a href="{% url 'candidate-list' %}" class="btn btn-primary">52 개의 문서</a>
+              <a href="{% url 'shared-documents' %}" class="btn btn-primary">52 개의 문서</a>
             </div>
           </div>
         </div>
@@ -87,12 +87,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'candidate-list' %}" class="primary-link">
+              <a href="{% url 'shared-documents' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">KIGAM</h6>
               </a>
               <p class="text-muted mb-4">한국지질자원연구원</p>
 
-              <a href="{% url 'candidate-list' %}" class="btn btn-primary">11 개의 문서</a>
+              <a href="{% url 'shared-documents' %}" class="btn btn-primary">11 개의 문서</a>
             </div>
           </div>
         </div>
@@ -103,12 +103,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/ncs-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'candidate-list' %}" class="primary-link">
+              <a href="{% url 'shared-documents' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">NC Square</h6>
               </a>
               <p class="text-muted mb-4">(주)엔씨스퀘어</p>
 
-              <a href="{% url 'candidate-list' %}" class="btn btn-primary">09 개의 문서</a>
+              <a href="{% url 'shared-documents' %}" class="btn btn-primary">09 개의 문서</a>
             </div>
           </div>
         </div>
@@ -120,12 +120,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/brnc-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'candidate-list' %}" class="primary-link">
+              <a href="{% url 'shared-documents' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">BRNC</h6>
               </a>
               <p class="text-muted mb-4">(주)비알엔씨</p>
 
-              <a href="{% url 'candidate-list' %}" class="btn btn-primary">27 개의 문서</a>
+              <a href="{% url 'shared-documents' %}" class="btn btn-primary">27 개의 문서</a>
             </div>
           </div>
         </div>
@@ -136,12 +136,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/unist-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'candidate-list' %}" class="primary-link">
+              <a href="{% url 'shared-documents' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">UNIST</h6>
               </a>
               <p class="text-muted mb-4">울산과학기술원</p>
 
-              <a href="{% url 'candidate-list' %}" class="btn btn-primary">07 개의 문서</a>
+              <a href="{% url 'shared-documents' %}" class="btn btn-primary">07 개의 문서</a>
             </div>
           </div>
         </div>
