--- a/templates/kinsdb/UNIST_database.html
+++ b/templates/kinsdb/UNIST_database.html
@@ -188,7 +188,7 @@
 
               <div class="col-lg-4">
                 <button type="submit" class="btn btn-primary w-50"><i class="uil uil-filter"></i> Filter</button>
-                <a href="{% url 'database' company='UNIST' institution='스웨덴' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
+                <a href="{% url 'brnc' company='UNIST' institution='스웨덴' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
 
               </div>
 
