--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -37,7 +37,7 @@
 
           <ul class="dropdown-menu dropdown-menu-center" aria-labelledby="jobsdropdown">
             <span class="dropdown-header">자료게시판</span>
-            <li><a class="dropdown-item" href="{% url 'candidate-list' %}">전체 공유문서함</a></li>
+            <li><a class="dropdown-item" href="{% url 'shared-documents' %}">전체 공유문서함</a></li>
             <li><a class="dropdown-item" href="{% url 'company-list' %}">기관별 공유문서함</a></li>
           </ul>
         </li>
