--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -147,7 +147,7 @@
               <div class="col-lg-3">
                 <div>
                   <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i>검색</button>
-                  <a href="{% url 'database' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply"></i></a>
+                  <a href="{% url 'brnc' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply"></i></a>
                 </div>
               </div>
             </div>
