--- a/templates/kinsdb/UNIST/component-list.html
+++ b/templates/kinsdb/UNIST/component-list.html
@@ -71,7 +71,7 @@
 
       <div class="col-lg-3">
         <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i> Filter</button>
-        <a href="{% url 'database' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
+        <a href="{% url 'brnc' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
       </div>
 
 
