--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -128,7 +128,7 @@
                   <td>An international peer review of the post-closure
                     radiological safety assessment for disposal in the Opalinus Clay of the Zürcher Weinland (스위스, 2004, NEA)</td>
                   <td>International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)</td>
-                  <<td class="data" onclick=location.href="{% url 'document' %}">SR-Site initial review (스웨덴, 2011~2013, SSM)</td>
+                  <td class="data" onclick=location.href="{% url 'document' %}">SR-Site initial review (스웨덴, 2011~2013, SSM)</td>
                   <td>EPG<br> SITEX-II Project</td>
                   <td></td>
                   <td></td>
