--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -56,7 +56,7 @@
               </a>
               <p class="text-muted mb-4">법령 체계 및 규제 관련 법안</p>
 
-              <a href="{% url 'institution' %}" class="btn btn-primary">Database 접속</a>
+              <a href="{% url 'brnc' %}" class="btn btn-primary">Database 접속</a>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
                 <h6 class="fs-18 mb-2">규제사례</h6>
               </a>
               <p class="text-muted mb-4">안전규제 사례 검토별 이슈</p>
-              <a href="{% url 'site' %}" class="btn btn-primary">Database 접속</a>
+              <a href="{% url 'unist' %}" class="btn btn-primary">Database 접속</a>
             </div>
           </div>
         </div>
