--- a/templates/kinsdb/institution.html
+++ b/templates/kinsdb/institution.html
@@ -168,7 +168,7 @@
         </div>
       </div>
       <!-- end col -->
-      <button type="button" class="btn btn-primary" onclick=location.href="{% url 'database' %}">DB 보기</button>
+      <button type="button" class="btn btn-primary" onclick=location.href="{% url 'brnc' %}">DB 보기</button>
 
     </div>
     <!--end row-->
