--- a/templates/partials/rnd_navbar.html
+++ b/templates/partials/rnd_navbar.html
@@ -54,7 +54,7 @@
           <ul class="dropdown-menu dropd\own-menu-center" aria-labelledby="productdropdown">
             <span class="dropdown-header">심층처분 데이터베이스</span>
             <li><a class="dropdown-item" href="{% url 'database-index' %}">데이터베이스 개요</a></li>
-            <li><a class="dropdown-item" href="{% url 'institution' %}">규제기준 관련</a></li>
+            <li><a class="dropdown-item" href="{% url 'brnc' %}">규제기준 관련</a></li>
             <li><a class="dropdown-item" href="{% url 'unist' %}">규제사례 관련</a></li>
           </ul>
         </li>
