--- a/templates/kinsdb/docs-detail.html
+++ b/templates/kinsdb/docs-detail.html
@@ -13,6 +13,15 @@
     height: auto !important;
     border: none !important;
   }
+
+  .bisection {
+    column-count: 2;
+  }
+
+  .bisection h6 {
+    break-before: column;
+  }
+  
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -145,7 +154,7 @@
                     <div class="ms-3">
                       <h6 class="fs-16 mb-0">
                         {% with doc.document.file.name|split:"/"|last as file %}
-                                {{ file }}{% endwith %}
+                        {{ file }}{% endwith %}
                       </h6>
                       <p class="text-muted mb-0">{{ doc.document.file.size|filesizeformat }}</p>
                     </div>
@@ -157,11 +166,20 @@
 
               </ul>
             </div>
-            <div class="candidate-education-details mt-4 pt-3">
-              <h6 class="fs-17 fw-bold mb-0"> [{{ doc.index_num }}] {{ doc.index_title }}</h6>
-              <div class="candidate-education-content mt-4">
-                <p class="text-muted">{{ doc.content }}</p>
+            <div class="candidate-education-details bisection mt-4 pt-3">
+              <div class="eng">
+                <h6 class="fs-17 fw-bold mb-0"> [{{ doc.index_num }}] {{ doc.index_title }}</h6>
+                <div class="candidate-education-content mt-4">
+                  <p class="text-muted">{{ doc.content_eng }}</p>
+                </div>
               </div>
+              <div class="kor">
+                <h6 class="fs-17 fw-bold mb-0"> [{{ doc.index_num }}] {{ doc.index_title }}</h6>
+                <div class="candidate-education-content mt-4">
+                  <p class="text-muted">{{ doc.content_kor }}</p>
+                </div>
+              </div>
+
             </div>
             <!--end candidate-education-details-->
 
