--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -5,11 +5,6 @@
 <!-- Choise Css -->
 <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
 <style>
-  table {
-    width: 85%;
-    border: 1px solid black;
-  }
-
   .tb-col {
     width: 10%;
   }
@@ -20,7 +15,8 @@
     font-size: 13px;
   }
 
-  td, th {
+  td,
+  th {
     vertical-align: middle;
   }
 
@@ -28,9 +24,9 @@
     text-decoration: underline;
     cursor: pointer;
   }
-  
 </style>
 {% endblock extra_css %}
+
 {% block content %}
 <!-- Start home -->
 <section class="page-title-box">
@@ -39,7 +35,6 @@
       <div class="col-md-6">
         <div class="text-center text-white">
           <h3 class="mb-4"> 규제사례 데이터베이스 </h3>
-
         </div>
       </div>
       <!--end col-->
@@ -61,9 +56,8 @@
 <!-- END SHAPE -->
 
 
-
 <section class="section">
-  <div class="container">
+  <div style="padding:5%">
 
     <div class="row">
       <div class="col-lg-12">
@@ -71,86 +65,133 @@
 
         <div class="card-body p-4">
           <div class="table-responsive">
-            <table class="table table-bordered table-striped mb-0">
+            <table class="table table-bordered mb-0">
               <thead>
                 <tr>
-                  <td colspan="6">전체 메뉴</td>
+                  <td colspan="14">전체 메뉴</td>
                 </tr>
                 <tr>
-                  <td class="tb-col" colspan="2" align="center" bgcolor="lightblue"></td>
-                  <th scope="col" class="text-center">
+                  <td class="tb-col" colspan="2" align="center"></td>
+                  <th scope="col" colspan="2" class="text-center">
                     개념화 단계<br>
                     <span class="fw-normal"></span>
                   </th>
-                  <th scope="col" class="text-center">
+                  <th scope="col" colspan="2" class="text-center">
                     부지조사/선정 단계<br>
                     <span class="fw-normal"></span>
                   </th>
-                  <th scope="col" class="text-center">
+                  <th scope="col" colspan="2" class="text-center">
                     기준 설계/인허가<br>신청단계
                   </th>
-                  <th scope="col" class="text-center">
+                  <th scope="col" colspan="2" class="text-center">
                     건설 단계<br>
                     <span class="fw-normal"></span>
                   </th>
-                  <th scope="col" class="text-center">
+                  <th scope="col" colspan="2" class="text-center">
                     운영 단계<br>
                     <span class="fw-normal"></span>
                   </th>
-                  <th scope="col" class="text-center">
+                  <th scope="col" colspan="2" class="text-center">
                     폐쇄 단계<br>
                     <span class="fw-normal"></span>
                   </th>
-
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">Safety Context</td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">안전전략</td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td class="tb-col" rowspan="3" align="center">평가 베이시스</td>
-                  <td class="tb-col" bgcolor="#E1F3FE">부지 특성</td>
-                  <td>An international peer review of the post-closure
-                    radiological safety assessment for disposal in the Opalinus Clay of the Zürcher Weinland (스위스, 2004, NEA)</td>
-                  <td>International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)</td>
-                  <td class="data" onclick=location.href="{% url 'document' %}">SR-Site initial review (스웨덴, 2011~2013, SSM)</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td class="tb-col">부지 특성</td>
+                  <td rowspan="3">
+                    <p>EPG</p>
+                    <p>An international peer review of the post-closure
+                      radiological safety assessment for disposal in the Opalinus Clay of the Zürcher Weinland (스위스, 2004, NEA)
+                    </p>
+                    <p>Report of the Special Review Committee on the NUMO safety case (일본, 2019, AESJ)</p>
+                    <p>Pre-application advice and scrutiny of Radioactive Waste Management Limited: Joint regulators' assessment of the 2016 generic Disposal System Safety Case (UK, 2018, ONR/EA)</p>
+                  </td>
+                  <td>
+                    <p>An International Peer Review of the "Dossier 2005 Argile" concerning Disposal in the Callovo-Oxfordian Formation (프랑스, 2006, NEA)</p>
+                    <p>Japan’s Siting Process for the Geological Disposal of High-level Radioactive Waste (일본, 2016, NEA)</p>
+                  </td>
+                  <td rowspan="3">
+                    <p class="data" onclick=location.href="{% url 'document' %}">EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td>
+                    International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)
+                  </td>
+                  <td rowspan="3">
+                    <p>EPG</p>
+                    <p>SITEX-Ⅱ Project</p>
+                    <p>SR-Site initial review (스웨덴, 2011~2013, SSM)</p>
+                    <p>SR-Site Main review (스웨덴, 2013~2015, SSM)</p>
+                    <p>STUK's review on the construction license stage post closure safety case of the spent nuclear fuel disposal in Olkiluoto (핀란드, 2015, STUK)</p>
+                  </td>
+
+                  <td></td>
+                  <td rowspan="3">
+                    <p>EPG</p>
+                    <p>SITEX-Ⅱ Project</p>
+                  </td>
                   <td></td>
                   <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+
                 </tr>
                 <tr>
                   <td class="tb-col">처분장 설계</td>
-                  <td>Report of the Special Review Committee on the NUMO safety case (일본, 2019, AESJ)</td>
-                  <td>International Expert Review of SRCan: Engineered Barrier Issues (스웨덴, 2008, SKI)</td>
-                  <td>SR-Site Main review (스웨덴, 2013~2015, SSM)</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td>
+                    International Expert Review of SRCan: Engineered Barrier Issues (스웨덴, 2008, SKI)
+                  </td>
+                  <td>Review of Engineered Barrier System (EBS) topics in Posiva’s construction license application for a spent fuel repository at Olkiluoto, Finland (핀란드, 2015, STUK)</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                   <td></td>
                   <td></td>
                 </tr>
+
                 <tr>
                   <td class="tb-col">안전성 평가 방법론</td>
-                  <td>Pre-application advice and scrutiny of Radioactive Waste Management Limited: Joint regulators'
-                    assessment of the 2016 generic Disposal System Safety Case (UK, 2018, ONR/EA)</td>
-                  <td>Review of SKB’s interim report of SR-Can: SKI’s and SSI’s evaluation of SKB’s up-dated methodology for safety assessment (스웨덴, 2005, SSI)
-                    International Expert Review of Sr-Can: Safety Assessment Methodology (스웨덴, 2008, SSI)</td>
-                  <td>STUK's review on the construction license stage post closure safety case of the spent nuclear fuel disposal in Olkiluoto (핀란드, 2015, STUK)</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td>Review of SKB’s interim report of SR-Can: SKI’s and SSI’s evaluation of SKB’s up-dated methodology for safety assessment (스웨덴, 2005, SSI)</td>
+                  <td>Review of safety assessment in Posiva’s construction license application for a repository at Olkiluoto (핀란드, 2015, STUK)</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -159,9 +200,24 @@
                   <td class="tb-col" rowspan="2" align="center">안전성 평가</td>
                   <td class="tb-col">운영 중 안전성 평가</td>
                   <td rowspan="2">EPG</td>
-                  <td rowspan="2">EPG<br> SITEX-II Project</td>
-                  <td rowspan="2">EPG<br> SITEX-II Project</td>
-                  <td rowspan="2">EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td rowspan="2">
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
+                  <td rowspan="2">
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
+                  <td rowspan="2">
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -169,42 +225,89 @@
                   <td class="tb-col">폐쇄 후 안전성 평가</td>
                   <td></td>
                   <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+
                 </tr>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">관리 시스템/이해관계자 및 규제기관 참여</td>
                   <td>EPG</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td>
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
+
                 </tr>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">증거들의 종합</td>
                   <td>EPG</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td>
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
+
                 </tr>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">불확실성 관리</td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
+
                 </tr>
                 <tr>
                   <td class="tb-col" colspan="2" align="center">한계점, 통제 및 조건</td>
                   <td>EPG</td>
-                  <td>EPG<br> SITEX-II Project</td>
+                  <td></td>
+                  <td>
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
+                  <td>
+                    <p>EPG</p>
+                    <p> SITEX-II Project</p>
+                  </td>
+                  <td></td>
                   <td>EPG</td>
+                  <td></td>
                   <td>EPG</td>
-                  <td>EPG</td>
+                  <td></td>
+
                 </tr>
 
               </tbody>
