--- a/templates/kinsdb/BRNC/brnc.html
+++ b/templates/kinsdb/BRNC/brnc.html
@@ -14,15 +14,15 @@
     width: 10%;
   }
 
-  td {
-    width: 20%;
-    text-align: center;
+  td,
+  th {
+    text-align: center !important;
     font-size: 13px;
   }
 
   td,
   th {
-    vertical-align: middle;
+    vertical-align: middle !important;
   }
 
   .data:hover {
@@ -55,6 +55,16 @@
   .sector {
     padding-top: 20px;
   }
+
+  .entire td{
+    font-size: 7px;
+  }
+
+  .entire {
+    table-layout: fixed;
+  }
+
+
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -171,9 +181,198 @@
           <div class="tab-content p-3 text-muted">
 
             <div class="tab-pane active" id="ALL" role="tabpanel">
-              <p class="mb-0">
-                DB
-              </p>
+              <table class="table table-bordered mb-0 entire" style="width:100%">
+                <tr>
+                  <th>수준</th>
+                  <th>국내</th>
+                  <th>미국</th>
+                  <th>스웨덴</th>
+                  <th>핀란드</th>
+                  <th>프랑스</th>
+                  <th>독일</th>
+                  <th>캐나다</th>
+                  <th>일본</th>
+                  <th>스위스</th>
+                </tr>
+
+                <tr>
+                  <td>법률</td>
+                  <td>
+                    <li><b>원안법 제63조</b></li>
+                    방사성페기물관리시설등의 건설, 운영허가
+                    <li><b>원안법 시행령 제96조</b></li>
+                    방사성폐기물관리시설등의 건설, 운영허가 신청
+                    <li><b>원안법 시행규칙 제87조</b></li>
+                    방사성폐기물관리시설등의 건설, 운영허가의 신청
+                  </td>
+                  <td>
+                    <li><b>Atomic Energy Act of 1954</b></li>
+                    원자력법
+                    <li><b>Energy Reorganization Act of 1974</b></li>
+                    에너지 재편법
+                    <li><b>Nuclear Waste Policy Act of 1982</b></li>
+                    방사성폐기물 정책법
+                  </td>
+                  <td>
+                    <li><b>The Act on Nuclear Activities (1984:3)</b></li>
+                    원자력활동법
+                    <li><b>The Radiation Protection Act (2018:396)</b></li>
+                    방사선방호법
+                    <li><b>Radiation Protection Ordinance (2018:506)</b></li>
+                    방사선방호조례
+                    <li><b>The Environmental Code (1998:808)</b></li>
+                    환경법
+                  </td>
+
+                  <td>
+                    <li><b>Nuclear Engergy Act</b></li>
+                    원자력 에너지 법
+                    <li><b>Nuclear Engergy Decree</b></li>
+                    원자력 에너지 법령
+                    <li><b>Radiation Decree</b></li>
+                    방사선 법
+                  </td>
+
+                  <td>
+                    <li><b>TSN Act</b></li>
+                    원자력분야 투명성 및 보안에 관한 법
+                    <li><b>Waste Act</b></li>
+                    방사성물질 및 폐기물의 지속가능한 관리에 관한 법
+                    <li><b>The Environmental Code</b></li>
+                    환경법
+                  </td>
+
+                  <td>
+                    <li><b>Basic Law (GG)</b></li>
+                    기본법
+                    <li><b>Atomic Energy Act (Atg)</b></li>
+                    원자력 에너지 법
+                    <li><b>Repository Site Selection Act (StandAG)</b></li>
+                    처분시설 부지 선정에 관한 법
+                    <li><b>Radiation Protection Ordinance (StrlSchV)</b></li>
+                    방사선방호 조례
+                  </td>
+
+                  <td>
+                    <li><b>Nuclear Safety and Control Act</b></li>
+                    원자력안전 및 통제법
+                    <li><b>Nuclear Fuel Waste Act</b></li>
+                    핵연료 폐기물 법
+                  </td>
+
+
+                  <td>
+                    <li><b>特定放射性廃棄物の最終処分に関する法律</b></li>
+                    특정방사성폐기물의 최종 처분에 관한 법률
+                    <li><b>特定放射性廃棄物の最終処分に関する法律</b></li>
+                    특정방사성폐기물의 최종 처분에 관한 법 시행령
+                    <li><b>特定放射性廃棄物の最終処分に関する法律</b></li>
+                    특정방사성폐기물의 최종 처분에 관한 법 시행규칙
+                  </td>
+
+                  <td>
+                    <li><b>Federal Nuclear Safety Ordinance (NSO)</b></li>
+                    <li><b>Feral Ordinance on the Disposal of Radioactive Waste (Radioactive Waste Ordinance)</b></li>
+
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>규정</td>
+                  <td>
+                    <li><b>원안위 고시 제2021-21호</b></li>
+                    고준위방폐물 심층처분시설에 관한 일반기준
+                    <li><b>원안위 고시 제2021-22호</b></li>
+                    사용후핵연료 인도규정
+                  </td>
+
+                  <td>
+                    <li><b>10CFR Part 60</b></li>
+                    지층처분장에 고준위방폐물 처분
+                    <li><b>10CFR Part 63</b></li>
+                    네바다주 유카마운틴 지층처분장에서의 고준위방폐물 처분
+                    <li><b>40CFR Part 191</b></li>
+                    사용후핵연료, 고준위 및 TRU 방폐물의 관리와 처분을 위한 환경방사선방호기준
+                    <li><b>40CFR Part 197</b></li>
+                    네바다주 유카마운틴을 위한 공중의 보건 및 환경방사선방호의 기준
+                  </td>
+
+                  <td>
+                    <li><b>Regulations concerning safety in nuclear facilities (SSMFS 2008:1)</b></li>
+                    원자력시설 안전 규정
+                    <li><b>Regulations on the protection of human health and the environment in connection with the final management of spent nuclear fuel and nuclear waste (SSMFS 2008:37)</b></li>
+                    인간 및 환경보호 관련 사용후핵연료 및 원자력폐기물의 최종 관리에 관한 규정
+                    <li><b>]Regulations on safety in connection with the disposal of nuclear material and nuclear waste (SSMFS 2008:21)</b></li>
+                    핵물질 및 원자력폐기물 처분에 관한 안전 규정
+                  </td>
+
+                  <td>
+                    <li><b>Radiation and Nuclear Safety Authority Regulation on the Safety of Disposal of Nuclear Waste (STUK Y/4/2018)</b></li>
+                    원자력폐기물 처분 안전에 관한 방사선 및 원자력안전 당국 규정
+                  </td>
+
+                  <td></td>
+
+                  <td>
+                    <li><b>Final Disposal of Heat Generating Radioactive Waste (BMU10)</b></li>
+                    발열방폐물의 최종처분에 관한 규정
+                    <li><b>Safety Criteria the Final Disposal of Radioactive Waste in a Mine </b></li>
+                    방폐물의 광산 최종처분시 안전 요건
+                    <li><b>Verordnung über Anforderungen und Verfahren zur Entsorgung radioaktiver Abfälle (Atomrechtliche Entsorgungsverordnung – AtEV)</b></li>
+                  </td>
+
+                  <td></td>
+
+                  <td></td>
+                  <td></td>
+                </tr>
+
+                <tr>
+                  <td>규제지침</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+
+                  <td>
+                    <li><b>Safety in the use of nuclear energy (Guide YVL A.1)</b></li>
+                    원자력 이용 안전관리
+                    <li><b>Site for nuclear facility (GUIDE YVL A.2)</b></li>
+                    원자력시설 부지에 관한 규제지침
+                    <li><b>Release Barriers of Spent Nuclear Fuel Disposal Faciltiy (GUIDE YVL D.7)</b></li>
+                    사용후핵연료 처분시설의 방벽에 대한 규제지침
+                    <li><b>DISPOSAL OF NUCLEAR WASTE(STUK-YVL D.5)</b></li>
+                    원자력폐기물 처분에 관한 규제지침
+                  </td>
+
+                  <td>
+                    <li><b>RFS (Basic Safety Rules)</b></li>
+                    기본안전규칙 등
+                    <li><b>RFS I.2 Safety objectives and design bases for surface facilities intended for long-term disposal of solid</b></li>
+                    RFS I.2 고체의 장기 처분을 위한 지상 시설의 안전 목표 및 설계 기반
+                    <li><b>ASN Guides 등</b></li>
+                    <li><b>Safety Guide on the final disposal of radioactive waste in deep geological formations (February 2008)</b></li>
+                    깊은 지층에서 방사성폐기물 최종처분에 관한 안전지침
+                  </td>
+
+                  <td></td>
+
+                  <td>
+                    <li><b>Guidance on Deep Geological Repository Site Characterization (Regulatory Document, REGDOC-1.2.1)</b></li>
+                    심지층처분시설 부지특성평가에 대한 지침
+                    <li><b>Management of radioactive waste Volume1 (REGDOC-2-11-1)</b></li>
+                    폐기물 관리, 제 1권 : 방사성폐기물 관리
+                  </td>
+
+                  <td></td>
+
+                  <td>
+                    <li><b>Specific design principles for deep geological repositories and requirements for the safety case(ENSI-G03)</b></li>
+                    심층처분시설에 대한 특정 설계 원칙 및 safety case 요구사항
+                  </td>
+                </tr>
+
+
+              </table>
             </div>
 
             <div class="tab-pane" id="KOR" role="tabpanel">
