--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -133,29 +133,29 @@
                   <td class="tb-col">부지 특성</td>
                   <td rowspan="3">
                     <p>EPG</p>
-                    <p>An international peer review of the post-closure
+                    <p>1) An international peer review of the post-closure
                       radiological safety assessment for disposal in the Opalinus Clay of the Zürcher Weinland (스위스, 2004, NEA)
                     </p>
-                    <p>Report of the Special Review Committee on the NUMO safety case (일본, 2019, AESJ)</p>
-                    <p>Pre-application advice and scrutiny of Radioactive Waste Management Limited: Joint regulators' assessment of the 2016 generic Disposal System Safety Case (UK, 2018, ONR/EA)</p>
+                    <p>2) Report of the Special Review Committee on the NUMO safety case (일본, 2019, AESJ)</p>
+                    <p>3) Pre-application advice and scrutiny of Radioactive Waste Management Limited: Joint regulators' assessment of the 2016 generic Disposal System Safety Case (UK, 2018, ONR/EA)</p>
                   </td>
                   <td>
-                    <p>An International Peer Review of the "Dossier 2005 Argile" concerning Disposal in the Callovo-Oxfordian Formation (프랑스, 2006, NEA)</p>
-                    <p>Japan’s Siting Process for the Geological Disposal of High-level Radioactive Waste (일본, 2016, NEA)</p>
+                    <p>4) An International Peer Review of the "Dossier 2005 Argile" concerning Disposal in the Callovo-Oxfordian Formation (프랑스, 2006, NEA)</p>
+                    <p>5) Japan’s Siting Process for the Geological Disposal of High-level Radioactive Waste (일본, 2016, NEA)</p>
                   </td>
                   <td rowspan="3">
                     <p class="data" onclick=location.href="{% url 'document' %}">EPG</p>
                     <p> SITEX-II Project</p>
                   </td>
                   <td>
-                    International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)
+                    6) International Expert Review of SRCan: Site Investigation Aspects External review contribution in support of SKI’s and SSI’s review of SR-Can (스웨덴, 2008, SKI/SSI)
                   </td>
                   <td rowspan="3">
                     <p>EPG</p>
                     <p>SITEX-Ⅱ Project</p>
-                    <p>SR-Site initial review (스웨덴, 2011~2013, SSM)</p>
-                    <p>SR-Site Main review (스웨덴, 2013~2015, SSM)</p>
-                    <p>STUK's review on the construction license stage post closure safety case of the spent nuclear fuel disposal in Olkiluoto (핀란드, 2015, STUK)</p>
+                    <p>10) SR-Site initial review (스웨덴, 2011~2013, SSM)</p>
+                    <p>11) SR-Site Main review (스웨덴, 2013~2015, SSM)</p>
+                    <p>12) STUK's review on the construction license stage post closure safety case of the spent nuclear fuel disposal in Olkiluoto (핀란드, 2015, STUK)</p>
                   </td>
 
                   <td></td>
@@ -174,9 +174,9 @@
                   <td class="tb-col">처분장 설계</td>
                   <td></td>
                   <td>
-                    International Expert Review of SRCan: Engineered Barrier Issues (스웨덴, 2008, SKI)
+                    7) International Expert Review of SRCan: Engineered Barrier Issues (스웨덴, 2008, SKI)
                   </td>
-                  <td>Review of Engineered Barrier System (EBS) topics in Posiva’s construction license application for a spent fuel repository at Olkiluoto, Finland (핀란드, 2015, STUK)</td>
+                  <td>13) Review of Engineered Barrier System (EBS) topics in Posiva’s construction license application for a spent fuel repository at Olkiluoto, Finland (핀란드, 2015, STUK)</td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -187,8 +187,11 @@
                 <tr>
                   <td class="tb-col">안전성 평가 방법론</td>
                   <td></td>
-                  <td>Review of SKB’s interim report of SR-Can: SKI’s and SSI’s evaluation of SKB’s up-dated methodology for safety assessment (스웨덴, 2005, SSI)</td>
-                  <td>Review of safety assessment in Posiva’s construction license application for a repository at Olkiluoto (핀란드, 2015, STUK)</td>
+                  <td>
+                    <p>8) Review of SKB’s interim report of SR-Can: SKI’s and SSI’s evaluation of SKB’s up-dated methodology for safety assessment (스웨덴, 2005, SSI)</p>
+                    <p>9) International Expert Review of Sr-Can: Safety Assessment Methodology (스웨덴, 2008, SSI)</p>
+                  </td>
+                  <td>14) Review of safety assessment in Posiva’s construction license application for a repository at Olkiluoto (핀란드, 2015, STUK)</td>
                   <td></td>
                   <td></td>
                   <td></td>
